# BYOS

./: .gitignore  AGENTS.md  README.md  pyproject.toml
BYOS/: __init__.py  byos_data.py  byos_eval.py  byos_eval_loss.py  byos_monitor.py  byos_prototype.py  byos_train.py  byos_v0_5.ipynb  cfg_byos.yaml  cfg_byos_default.yaml  cfg_byos_dolma.yaml  cfg_byos_max.yaml  cfg_eval_batch1.yaml  rope.py  tokenizer.py
BYOS/eval/: __init__.py  batch1_ablation.py  batch1_efficiency.py  batch1_loss.py  batch1_retention_probe.py  batch1_state_metrics.py  common.py  run_batch1.py
